# stews

./: .gitignore  ARCHITECTURE.md  Cargo.toml  KEYMAP.md  Makefile  PLAN.md  README.md  ROADMAP.md  UX_FLOWS.md
archive/python-scaffold/: pyproject.toml
archive/python-scaffold/src/stews/: __init__.py  main.py  state.py  tui.py
archive/python-scaffold/tests/: test_state.py
examples/: settings.json  user.json
src/: logo.rs  main.rs  theme.rs
