[package]
name = "stews"
version = "0.1.0"
edition = "2024"
description = "stews: JSON-focused terminal editor (ratatui skeleton)"
license = "MIT"

[dependencies]
anyhow = "1"
arboard = "3"
crossterm = "0.29"
dotenvy = "0.15"
ratatui = "0.29"
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"
